--- a/webdesign/test1/book.html
+++ b/webdesign/test1/book.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="http://static.tumblr.com/lthqlys/QL2nlgpbm/jquery.scrollto.js"></script>
 <script type="text/javascript" src="http://static.tumblr.com/lthqlys/slCnlgpc9/lancement.js"></script>
  
-
+<script type="text/jscript" src="https://raw.githubusercontent.com/acdlite/jquery.sidenotes/master/lib/jquery.sidenotes.js"></script>
 
 
   <style type="text/css">
@@ -28,12 +28,23 @@
 </head>
 <body>
 
+<div class="toc">
+   Table of Contents
+    <p><a href="#within-the-image">Within The Images (Jonathan Beller)</a></p>
+    <p><a href="#within-the-image">Within The Images (Jonathan Beller)</a></p>
+
+</div>
+
+
+
 <div class="maintext">
+<script> 
+    $('.maintext').sidenotes();
+</script>
+<h1 id="within-the-image">Within The Image</h1>
 
-
-<h1 id="jonathan-beller">Jonathan Beller</h1>
-<h1 id="within-the-image">WITHIN THE IMAGE</h1>
-<h1 id="portions-of-this-essay-were-originally-published-as-wagers-within-the-image-rise-of-visuality-transformation-of-labour-aesthetic-regimes-in-culture-machine-vol.-12-2012-httpwww.culturemachine.net"><em>Portions of this essay were originally published as &quot;Wagers Within the Image: Rise of Visuality, Transformation of Labour, Aesthetic Regimes&quot; in Culture Machine, vol. 12, 2012; http://www.culturemachine.net</em></h1>
+<h2 id="jonathan-beller">Jonathan Beller</h2>
+<h3 id="portions-of-this-essay-were-originally-published-as-wagers-within-the-image-rise-of-visuality-transformation-of-labour-aesthetic-regimes-in-culture-machine-vol.-12-2012-httpwww.culturemachine.net"><em>Portions of this essay were originally published as &quot;Wagers Within the Image: Rise of Visuality, Transformation of Labour, Aesthetic Regimes&quot; in Culture Machine, vol. 12, 2012; http://www.culturemachine.net</em></h3>
 <p>Let us examine a few consequences of the industrialization of the visual. As IPO after IPO seem to demonstrate, to look is to labor: looking itself is posited as value-productive labor. We know this now. In the cinematic mode of production this generalizes to what I called ‘the attention theory of value’.<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a> <div class="footnotes"  id="fn1"><p>J. Beller, <em>The Cinematic Mode of Production: Attention Economy and the Society of the Spectacle</em>, Lebanon, NH: Dartmouth University Press, 2006.<a href="#fnref1">↩</a></p></div> Today, after the internet revolution (or, perhaps equally, counter-revolution), this relation between screen-time and social production is increasingly pre-supposed. Of course the energy levels, control modules and digitized metrics of interactivity have been vertiginously intensified. Here we must remark that with the digitization of the screen as socio-biological interface, with the ramification of both its functionality and the intensive development of a metrics of attention, the stock prices of media companies such as Google are what they are because they are exploits: schemas for the expropriation of value produced by the users (and therefore the used). Early dot.com markets picked up on this shift before it was widely understood. Today, this arrangement of screen-cybernetics along with an increasingly precise metrics of attention has its sights on nearly every aspect of lived and to-be-lived time, even those forms of time that are engaged in organized struggle against capitalist forms of domination. As has been remarked, the perception of Facebook’s and Twitter’s future monetization potential increases with every ‘Twitter revolution’: unrest in Tunisia, Cairo, Madrid and New York become bankable events for new media corporations in ways at once departing from but analogous to what news has long been for print and television.</p>
 <p>This interface between spectator and social machinery, realized as ‘the image’ (which received rigorous critical analysis by the Frankfurt School, the situationists (Debord) and feminist film theory), has been generalized to the omnipresent screen and is also being extended to the other platforms and senses: ‘the computer,’ ‘the tablet,’ and ‘the cellphone’ – all of which appear increasingly similar. Now, of course, the programme is being extended to sound, smell, touch and taste – music and game sounds, obviously, but also programmed shopping environments (which themselves extend into the urban fabric) organized by architecture, texture, scent, and arguably salt, sugar and fat. These innovations and their convergence (towards the omnipresent, omnivorous and indeed omniscient cyber-spatialized mall-military-prison-post-industrial cosmopoplex) bring about new levels of interactivity as well as new and ever more elaborate metrics for the organization and parsing of attention-production.</p>
 <p>Such a transformation of the role of visuality, sensuality and their media technologies in social production and reproduction necessitated the formulation of the above mentioned attention theory of value, which reduces to the labor theory of value at sub-light (sub-cinematic) speeds but allows value formations to persist for a while in the electronic matrix in non-monetized forms. The theory posits that attention produces value in at least three ways:</p>
@@ -67,6 +78,9 @@
 <p>We must register the violence endemic to the conversion of historically dispossessed others into images and signs – in addition to objects (a concern central to the work of the young urban photo- graffiti artist JR) – because in being figured as bare life, multitudes, refugees, tribes, slum-dwellers, or terrorists, and even when not being figured at all, the capitalized universe of images and signs constitutes and de-constitutes these beings (this flesh, to borrow from Hortense Spillers, 1987) for its own purposes. As entity, non-entity, iPad, auto-part, rare-earth metal, securitized population or void, the now doubly dispossessed are materially and symbolically disappeared for politico-economic ends. In other words, not only global commodity-chain production (which relies on disappeared labor 1.0) but planetary semiosis and affect-formation (which relies on disappeared labor 2.0) are rooted in the biomass of a planet of persons excluded not just from meaningful dialogue, but from dialogue. It should be underscored that the movement from 1.0 to 2.0 is a movement that took place over a matter of centuries of racialization and gendered violence but is today ‘noticeable’ which is to say ‘theoriseable’ because the chickens are coming home to roost. As Césaire remarked, what was unforgiveable about the Holocaust, was not the brutality, torture and murder, what was unforgiveable was that the techniques of colonization were applied to white people.<a href="#fn17" class="footnoteRef" id="fnref17"><sup>17</sup></a> Peoples of the Global South were the first ‘content providers.’ Now the situation is generalized.</p>
 <p>Understood in this way, it would appear that the result of not just history, but also of the history of representation – representation now ‘fully’ captured by capital, and shunted into an informatics matrix in which capital structures images and images structure sign function, and sign function is endemic to social production and reproduction – has been to make democracy structurally impossible. Such is the ‘reality’ for which the recession of the Real stands as symptom. The material foreclosure of the logic endemic to the conceit of human being is the technical achievement that provides the historical explanation for ‘being’ being placed under erasure in the realm of the sign. Understanding philosophically, as it were, that with the expiration of Western metaphysics one also confronts the expiration of humanism and the conceits pertaining to ‘the human’ follows logically; however understanding mediologically that this emptying out of tradition called post-structuralism is consequent upon the historico-material conversion and therefore demotion of ‘natural language’ into one medium among media requires a materialist approach to the totality of informatic networks that avowedly post-dialectical and post-historical thought cannot easily accommodate. Admittedly, it might take a book-length study to properly historicize Jacques Derrida’s <em>Of Grammatology</em> and to methodologically ‘comprehend’ the moment in intellectual history known as ‘deconstruction’ as a specific symptom of and in the long historical process of uprooting and eviscerating language. Nonetheless, one might speculate that the ‘being’ under erasure there was formerly assumed to be part of the commons. As Kwame Anthony Appiah question indicated in ‘Is the Post- in Postmodernism the Post- in Postcolonial?’ there is an intimate connection between the erosion of the birthrights of colonized peoples and the erosion of the Western birthright purportedly guaranteed by Western metaphysics. For our purposes here we may grasp that in both the material and philosophical domains the basis and the rationale for democracy have been steadily eroded. This somewhat controversial hypothesis affirms what has been discernible at least since the onset of post- modernity: because of shifts in the matrix of representation and its material underpinnings, under advanced capitalism neither reality nor being can be adequately mounted and sustained and thus neither democratic representation nor perhaps democracy is possible. From a technical perspective this is an advance. Dialectically speaking, from this historically achieved and instrumental condition of generalized simulation there is no return.</p>
 <p>Put another way, having reached historically the general fulfillment of what Marx saw clearly as the specific experience of the wage-laborer, namely &quot;the loss of reality,&quot; the real is gone and thus the aestheticization of politics is complete. It would seem that Communism must respond by politicizing simulation, which is to say, the universe of appearances mediated by abstraction, which is to say, in short, everything, however we must leave the very question of “the political” along with the transformed ontology of “politics” itself for another time.</p>
+</div>
+
+<div class="reference">
 <h2 id="reference-list"><em>Reference List</em></h2>
 <p>Althusser, L. ‘Ideology and Ideological State Apparatuses,<em>’ Lenin and Philosophy and Other Essays</em>, trans. B. Brewster, Monthly Review Press, 1971.</p>
 <p>Beller, J. <em>The Cinematic Mode of Production: Attention Economy and the Society of the Spectacle</em>, Lebanon, NH: Dartmouth University Press, 2006.</p>
@@ -93,7 +107,7 @@
 <p>Terranova, T. ‘Free Labor: Producing Culture for the Digital Economy’, 2003, http://www.electronicbookreview.com/thread/technocapitalism/voluntary.</p>
 <p>Virno, P. <em>A Grammar of the Multitude</em>, Cambridge: MIT Press, 2004.</p>
 <p>Zizek, S. ‘The Revolt of the Salaried Bourgeoisie’, <em>London Review of Books</em>, Vol. 34 No. 2, (26 January, 2012): 9-10.</p>
-</div>
+
 
 
 
@@ -104,6 +118,10 @@
 <ol>
 
 <div class="footnotes"  id="fn4"><p>P. Virno, <em>A Grammar of the Multitude</em>, Cambridge: MIT Press, 2004.<a href="#fnref4">↩</a></p></div>
+
+
+
+
 <div class="footnotes"  id="fn5"><p>S. Zizek, ‘The Revolt of the Salaried Bourgeoisie’, <em>London Review of Books</em>, Vol. 34 No. 2, (26 January, 2012): 9-10.<a href="#fnref5">↩</a></p></div>
 <div class="footnotes"  id="fn6"><p>D. Hoffman, ‘Violent Virtuosity: Visual Labor in West Africa’s Mano River War,’ <em>Anthropological Quarterly</em>, Vol. 84, no. 4 (Fall, 2011): 949-976.<a href="#fnref6">↩</a></p></div>
 <div class="footnotes"  id="fn7"><p>D. Hoffman, ‘Violent Virtuosity: Visual Labor in West Africa’s Mano River War,’ <em>Anthropological Quarterly</em>, Vol. 84, no. 4 (Fall, 2011), p. 952<a href="#fnref7">↩</a></p></div>
@@ -119,6 +137,7 @@
 <div class="footnotes"  id="fn16"><p>J. Beller, ‘Paying Attention’, <em>Cabinet 24</em> (2008), http://www.cabinetmagazine.org/issues/24/beller.php<a href="#fnref16">↩</a></p></div>
 <div class="footnotes"  id="fn17"><p>A. Césaire, <em>Discourse on Colonialism</em>, trans. J. Pinkham, New York and London: Monthly Review Press, 1972.<a href="#fnref17">↩</a></p></div>
 </ol>
+</div>
 
 </div>
 </body>
