--- a/test website/index.html
+++ b/test website/index.html
@@ -8,6 +8,16 @@
 	<style type="text/css">code{white-space: pre;}</style>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<!--<script src="intence.js"></script> SCRIPT FOR THE SCROLLING THING-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="jquery.sidenotes.min.js"></script> <!-- SIDENOTES SCRIPT -->
+	<script src="jquery.sidenotes.js"></script>
+	<script>
+
+	$(document).ready(function(){
+		$('.section').sidenotes();
+	});
+	</script>
+
 </head>
 <body>
 	<!--<div id="scroll" class="intence" scrollimg="dark_embroidery.png"> BEGIN SCROLL-->
@@ -389,6 +399,7 @@
 	<p>Zukin, Sharon. <em>Landscapes of Power: From Detroit to Disney World</em>, Berkeley: University of California Press, 1991.</p>
 	<p>Zukin, Sharon. <em>The Cultures of Cities</em>, Cambridge: Blackwell, 1995.</p>
 	</div>
+	
 	<div class="section">
 <p>Irmgard Emmelheinz</p>
 	<h2 id="neoliberalism-and-the-autonomy-of-art-the-culture-of-power-the-power-of-culture1">NEOLIBERALISM AND THE AUTONOMY OF ART: THE CULTURE OF POWER, THE POWER OF CULTURE<a href="#fn170" class="footnoteRef" id="fnref170"><sup>170</sup></a></h2>
