--- a/webdesign/test4_markdown_sidenotes_working/index.html
+++ b/webdesign/test4_markdown_sidenotes_working/index.html
@@ -1104,7 +1104,23 @@
     
 <script src="md-sidenotes.js" type="text/javascript"></script>
 <script>
-       initialize();
+		console.log("hi");
+
+       initialize({
+        rootSel:'#page-content-wrapper', //rootWrapper for your content
+        footNotesContainerSel:'.footnotes', //base container for the footnotes to transform into sidenotes
+        footNotesSel:'ol li', //selector for the footnotes
+        footNoteIdPattern:'fn', //existing footNotes ID prefix
+        footNoteAnchorPattern:'fnref', //ID prefix for the anchors in the main content, linking to notes.
+        sideNoteClass:'sidenote', //optional : this class will be used for the generated sidenotes
+        largeMediaQuery:'(min-width: 600px)', //Media query to trigger the behavior for ‘large’ screens
+        mediumMediaQuery:'(max-width: 600px)', //Media query to trigger the behavior for ‘medium’ screens
+        smallMediaQuery:'' //Media query to trigger the behavior for ‘small’ screens
+       });
+
+
+
+       
     </script>
 	
 	
