--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//http://code.jquery.com/jquery-1.10.2.js"></script>
+ 	<script src="//http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="search.js"></script>
     <link rel="stylesheet" href="search.css">
 </head>
 <body>
 	
 	<!-- SEARCH BOX -->
-	<form id="live-search" action="" class="styled" method="post">
+		<form id="live-search" action="" class="styled" method="post">
 		<fieldset>
 			<input type="text" class="text-input" id="filter" value="" />
 			<span id="filter-count"></span>
