--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//http://code.jquery.com/jquery-1.10.2.js"></script>
- 	<script src="//http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="search.js"></script>
     <link rel="stylesheet" href="search.css">
 </head>
