--- a/webdesign/test-pushingmenu/pushingmenutest.html
+++ b/webdesign/test-pushingmenu/pushingmenutest.html
@@ -20,6 +20,18 @@
     <a href="#">Nav6</a>
     <a href="#">Nav7</a>
   </nav>
+     
+     
+<nav class="pushmenu2 pushmenu-left">
+    <h3>Menu</h3>
+    <a href="#">Home</a>
+    <a href="#">Nav2</a>
+    <a href="#">Nav3</a>
+    <a href="#">Nav4</a>
+    <a href="#">Nav5</a>
+    <a href="#">Nav6</a>
+    <a href="#">Nav7</a>
+  </nav>
   
 <div class="container">
         <div class="main">
