--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -5,17 +5,12 @@
 <head>
 
 	<meta charset="utf-8">
-
 	<title>Demo</title>
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
+	<script src="highlight.js" type="text/javascript"></script>
 	<script src="search.js"></script>
-
 	<link rel="stylesheet" href="search.css">
-
 </head>
 
 <body>
@@ -25,50 +20,28 @@
 	<!-- SEARCH BOX -->
 
 	<form id="live-search" action="" class="styled" method="post">
-
 		<fieldset>
-
-			<input type="text" class="text-input" id="filter" value="" />
-
 			<span id="filter-count"></span>
-
+			<input type="text" class="text-input" id="filter" value="" />
 		</fieldset>
-
 	</form>
 
+	
 	<div id="main">
-
-
-
 		<!-- TABLE OF CONTENTS -->
-
 		<nav>
-
 			<ul>
-
 				<li><a href="#chapter1">THE GRAY ZONES OF CREATIVITY AND CAPITAL</a></li>
-
 				<li><a href="#chapter2">THE MISSING CHAPTER OF EMPIRE</a></li>
-
 				<li><a href="#chapter3">WITHIN THE IMAGE</a></li>
-
 				<li><a href="#chapter4">NEUTRALIZING ENGAGED SUBJECTS IN THE CREATIVE CITY</a></li>
-
 				<li><a href="#chapter5">THE AGENCY OF ART IN THE UNCONSCIOUS</a></li>
-
 				<li><a href="#chapter6">THE ART OF NEW CLASS GEOGRAPHY OF THE CITY - CULTURE-GUIDED URBAN REGENERATION SERVING THE <em>MODERNIZATION</em> OF THE PERIPHERY</a></li>
-
 				<li><a href="#chapter7">THE CREATIVE FACTORY: COLLECTIVE CREATIVITY AND AUTONOMY IN THE NEOLIBERAL MACHINE OF CREATIVE INDUSTRIES</a></li>
-
 				<li><a href="#chapter8">NEOLIBERALISM AND THE AUTONOMY OF ART: THE CULTURE OF POWER, THE POWER OF CULTURE</a></li>
-
 				<li><a href="#chapter9">NOTES</a></li>
-
 			</ul>
-
 		</nav>
-
-
 
 
 
@@ -2095,17 +2068,7 @@
 				</div> <!-- content -->
 
 			</div> <!-- main -->
-
-
-			<div style="position: fixed; left: 0px; bottom: 0px; width: 100px; height: 100px; background-image: url(search.gif);"></div>
-
-
-			<script> 
-
-
-
-			</script>
-
+			
 		</body>
 
 		</html>
