citation box finished

--- a/webdesign/test_citation_styles/cite.html
+++ b/webdesign/test_citation_styles/cite.html
@@ -24,7 +24,6 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
-
 	<!--<style type="text/css">code{white-space: pre;}</style>-->
 	<link rel="stylesheet" type="text/css" href="cite.css">
 	<!--<script src="intence.js"></script> SCRIPT FOR THE SCROLLING THING-->
@@ -44,7 +43,7 @@
     <link href="swisnl-jQuery-contextMenu-44db0f6/screen.css" rel="stylesheet" type="text/css" />
     <link href="swisnl-jQuery-contextMenu-44db0f6/prettify/prettify.sunburst.css" rel="stylesheet" type="text/css" />
 -->
-    <!--CONTEXT-MENU COPY PASTE-->
+<!--CONTEXT-MENU COPY PASTE-->
 
 
 
@@ -163,7 +162,7 @@
 
 	<div id="citation-box" style="display: none">Cite your selection with the following conventions:
 		<button id="cite" style="display:block">PRESS TO CITE</button>
-		<p>MLA</p>
+		<abbr title="Modern Language Association">MLA</abbr>
 	    <textarea id="mla" placeholder="MLA"></textarea>
 	    <p>Chicago</p>
 	    <textarea id="chi" placeholder="Chicago"></textarea>
