fixed next/prev + citations

--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -9,10 +9,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script src="highlight.js" type="text/javascript"></script>
 	<script src="search.js"></script>
+	<script type="viewport-0.0.2/viewport.js"></script>
 	<link rel="stylesheet" href="search.css">
 </head>
 
-<body>
+<body id="myViewport">
 
 	
 
@@ -25,8 +26,8 @@
 		</fieldset>
 	</form>
 
-	<a class="search_nav" id="prev" href="#hit0">PREV</a>
-	<a class="search_nav" id="next" href="#hit0">NEXT</a>
+	<a class="search_nav" id="prev" href="">PREV</a>
+	<a class="search_nav" id="next" href="">NEXT</a>
 
 	
 	<div id="main">
@@ -190,7 +191,7 @@
 
 			<h3 id="notes">Notes</h3>
 
-			
+		</div>			
 
 			<div class="section"> <!-- SECTION 3 -->
 
