ch-ch-ch-changeees

--- a/webdesign/test_citation_styles/cite.html
+++ b/webdesign/test_citation_styles/cite.html
@@ -129,7 +129,7 @@
 </div>
 <!-- NOTES -->
 <h3 id="notes">Notes</h3>
-	<div class="footnotes">
+	<div id="footnotes" class="footnotes">
 		<hr />
 		<ol>
 			<li id="fn1"><p>Different versions of this essay were presented at Bureau Publik, Copenhaguen, October 31<sup>st</sup>, 2013 and KHIB in Bergen, Norway, on November 5, 2013.<a href="#fnref1">↩</a></p></li>
