push menu + vertical + horizontal progress bar

--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -30,23 +30,44 @@
 	<a class="search_nav" id="next" href="">NEXT</a>
 
 	
-	<div id="main">
+	<div id="main" class="pushmenu-push">
 		<!-- TABLE OF CONTENTS -->
-		<nav>
-			<ul>
-				<li><a href="#chapter1">THE GRAY ZONES OF CREATIVITY AND CAPITAL</a></li>
-				<li><a href="#chapter2">THE MISSING CHAPTER OF EMPIRE</a></li>
-				<li><a href="#chapter3">WITHIN THE IMAGE</a></li>
-				<li><a href="#chapter4">NEUTRALIZING ENGAGED SUBJECTS IN THE CREATIVE CITY</a></li>
-				<li><a href="#chapter5">THE AGENCY OF ART IN THE UNCONSCIOUS</a></li>
-				<li><a href="#chapter6">THE ART OF NEW CLASS GEOGRAPHY OF THE CITY - CULTURE-GUIDED URBAN REGENERATION SERVING THE <em>MODERNIZATION</em> OF THE PERIPHERY</a></li>
-				<li><a href="#chapter7">THE CREATIVE FACTORY: COLLECTIVE CREATIVITY AND AUTONOMY IN THE NEOLIBERAL MACHINE OF CREATIVE INDUSTRIES</a></li>
-				<li><a href="#chapter8">NEOLIBERALISM AND THE AUTONOMY OF ART: THE CULTURE OF POWER, THE POWER OF CULTURE</a></li>
-				<li><a href="#chapter9">NOTES</a></li>
-			</ul>
-		</nav>
+			<nav id="menu" class="pushmenu pushmenu-left">
+				<ul>
+					<li><a href="#chapter1">The Gray Zones of Creativity and Capital</a>
+						<li class="horizScroll"></li>
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter2">The Missing Chapter of Empire</a></li>
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter3">Within the Image</a></li>
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter4">Neutralising Engaged Subjects in the Creative City</a></li>
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter5">The Agency of Art in the Unconscious</a></li>	
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter6">The Art of New Class geography of teh City -- Culture-guided Urban Regeneration Serving the <em>Modernization</em> of the Periphery</a></li>
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter7">The Creative Factory: Collective Creativity and Autonomy in the Neoliberal Machine of Creative Industries</a></li>						
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter8">Neoliberalism and the Authonomy of Art: The Culture of Power, the Power of Culture</a></li>
 
+					</li>
+					<li>
+						<li class="horizScroll"><a href="#chapter9">Notes</a></li>
+					</li>
+				</ul>
+			</nav>
 
+			<div id="nav_list">
+				<div id="menu_bar_scroll"></div>
+			</div>
 
 	<!-- MAIN CONTENT -->
 	<div id="content">
@@ -54,7 +75,6 @@
 		<div class="section"> <!-- SECTION 1 -->
 
 			<p><em>Introduction</em></p>
-
 			<h1 id="chapter1">THE GRAY ZONES OF CREATIVITY AND CAPITAL</h1>
 
 			<p>The initial idea that led to the preparation of this publication was not a reflection of the editors’ wish to merely add another publication focusing on a critique of the relationship between creative industries and capital to the huge corpus of similar publications taking a critical stance towards the process of co-optation of creativity, creative industries, art or the domain of abstraction in general by capital. Even though, precisely through the logic of the mass production of critical texts dealing with the above-mentioned context, this publication as well will ultimately exist in such a register, the distinctive feature of this publication is its aspiration to place the relationship between creativity and capital in the context of an analysis wherein capitalism is treated as the framework of a broader relationship of domination, which to a great degree goes beyond the currently popular critical niche focused on analyzing the relationship between creativity, abstraction or representation in general and capital.</p>
@@ -887,11 +907,11 @@
 
 			<!-- FOOTNOTES -->
 
-			<div class="footnotes">
+			<div class="section">
 
 				<hr />
 
-				<ol><h2 id="chapter9">Notes</h2>
+				<ol><h1 id="chapter9">Notes</h1>
 
 					<li id="fn1"><p>Different versions of this essay were presented at Bureau Publik, Copenhaguen, October 31<sup>st</sup>, 2013 and KHIB in Bergen, Norway, on November 5, 2013.<a href="#fnref1">↩</a></p></li>
 
