--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -29,9 +29,9 @@
 
 	
 	<div id="main" class="pushmenu-push">
-		<!-- TABLE OF CONTENTS MENU -->
+		<!-- TABLE OF CONTENTS -->
 		<nav id="menu" class="pushmenu pushmenu-left">
-			<div> <!-- CONTAINER FOR TOC -->
+			<div>
 				<a href="#chapter1"><div class="horizScroll">The Gray Zones of Creativity and Capital</div></a>
 				
 					
