--- a/webdesign/test_citation_styles/cite.html
+++ b/webdesign/test_citation_styles/cite.html
@@ -40,7 +40,7 @@
 	<div id="main">
 
 	<!-- SECTION 1 -->
-		<div id="a" class="section" data-authorName="Santiago" data-authorLastName="Castro-Gómez" data-article="The Missing Chapter of Empire: Postmodern Reorganization of Coloniality and Post-Fordist Capitalism">
+		<div class="section" data-authorName="Santiago" data-authorLastName="Castro-Gómez" data-article="The Missing Chapter of Empire: Postmodern Reorganization of Coloniality and Post-Fordist Capitalism">
 			<p>Santiago Castro-Gómez</p>
 		<h2 id="the-missing-chapter-of-empire>">THE MISSING CHAPTER OF <span class="keyword">EMPIRE</span></h2>
 		<p><em><span class="keyword">postmodern</span> reorganization of coloniality and post-Fordist capitalism</em><a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a></p>
