--- a/webdesign/test6_search/search.html
+++ b/webdesign/test6_search/search.html
@@ -66,7 +66,7 @@
 		</nav>
 
 		<!-- VERTICAL SCROLL BAR -->
-		<div id="nav_list">
+		<div id="menu_bar">
 			<div id="menu_bar_scroll"></div>
 		</div>
 
