--- a/webdesign/ongoing prototype/lambda.html
+++ b/webdesign/ongoing prototype/lambda.html
@@ -880,8 +880,8 @@ TRANSFORMED INTO SIDENOTES
 
 
             <div id="buttons_wrapper" class="not">
-                <a href="#" class="search_nav" id="prev">PREV</a>
-                <a href="#" class="search_nav" id="next">NEXT</a>
+                <button href="#" class="search_nav" id="prev">PREV</button>
+                <button href="#" class="search_nav" id="next">NEXT</button>
             </div>
 
 
