--- a/webdesign/ongoing prototype/lambdaJosip.html
+++ b/webdesign/ongoing prototype/lambdaJosip.html
@@ -62,52 +62,16 @@
 <!--––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 ––––––––––––––––––––––––––– STRUCTURE (pushmenu) –––––––––––––––––––––––––––
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->
+            <div class="toggle_menu"></div>
+
     <div id="main" class="pushmenu-push"> <!-- do not delete, it's what makes the content move to the right-->
-
-<!--
-//         TOOLBOX 
-//        <input type="checkbox" name="toggle" id="toggle" style="position:fixed;"/>
-        <label for="toggle"></label>
-        <div class="message" id="dragable"> 
-
-        Search Box
-        <form action="" class="styled" id="live-search" method="post" name="live-search" onsubmit="return false;">
-        <fieldset>
-        <input class="text-input" id="filter" type="text" value="">
-        <span id="filter-count">Search inside</span>
-        </fieldset>
-        </form>   
-    
-        Citation
-        <div id="citation-box">Cite your selection with the following conventions:
-        <button id="cite">PRESS TO CITE</button>
-        <abbr title="Modern Language Association">MLA</abbr><textarea id="mla" placeholder="MLA"></textarea>
-        <p>Chicago</p><textarea id="chi" placeholder="Chicago"></textarea>
-        </div>
-
-        Downloads 
-        <span class="hover-button"><a href="#">.EPUB</a></span><br>
-        <span class="hover-button"><a href="#">.PDF</a></span>
-        <span class="hover-button"><a href="#">Markdown</a></span>
-        <span class="hover-button"><a href="#">.Doc</a></span>
-    
-        TOOLBOX 2 
-        <input type="checkbox" name="toggle2" id="toggle2" style="position:fixed;"/>
-        <label for="toggle"></label>
-        <div class="message2"> 
-            Downloads  
-            <span class="hover-button"><a href="#">.EPUB</a></span><br>
-            <span class="hover-button"><a href="#">.PDF</a></span>
-            <span class="hover-button"><a href="#">Markdown</a></span>
-//            <span class="hover-button"><a href="#">.Doc</a></span> 
-//        </div>
---> 
 
 <!--––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 ––––––––––––––––––––––––––– MENU ON THE LEFT (TABLE OF CONTENTS) –––––––––––
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->
 
         <nav id="menu" class="pushmenu pushmenu-left not">
+
             <div id="toc_wrapper">
                 <h2><a href="#chapter1">The Gray Zones of Creativity and Capital<div class="horizScroll"></div></a></h2>
                 <h2><a href="#chapter2">Within the Image<div class="horizScroll"></div></a></h2>
@@ -132,9 +96,9 @@
         </nav>
 
 <!--––––––––––––––––––––––– VERTICAL SCROLL BAR –––––––––––––––––––––––––-->
-        <div id="menu_bar">
+<!--         <div id="menu_bar">
             <div id="menu_bar_scroll"></div>
-        </div>
+        </div> -->
 
 <!--––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 ––––––––––––––––––––––––––– CONTENT (center) –––––––––––––––––––––––––––––––
@@ -146,6 +110,7 @@
         <!-- <div class="main"> -->
 
         <div id="content">
+
 
 <!--––––––––––––––––––––––– INFO BOX (top) ––––––––––––––––––––––––––––––-->
             <div id="info-box" class="not">
@@ -217,7 +182,7 @@
 -->
 
 <!--––––––––––––––––––––––– SECTION 1 –––––––––––––––––––––––––––––––––––-->
-            <div class="section" id="chapter1" data-authorName="Gordana" data-authorLastName="Nikolić" data-article="Introduction">
+            <div class="section toppy" id="chapter1" data-authorName="Gordana" data-authorLastName="Nikolić" data-article="Introduction">
 
               <!-- CONTENT OF THE BOOK -->
 <!-- 
@@ -399,7 +364,7 @@
                 <p>How can we explain the gray zone, the minimum distance between creativity and capitalist demand? How can we understand creative autonomy and resistance in the context of renewed expectations for art to have a direct social and political utility? What can psychoanalysis contribute to art criticism as it relates to the field of politicized visual art, now more commonly referred to as socially engaged art? What does the notion of the <em>avant-garde</em> mean for cultural production in a world of networked connectivity, participatory ideology and creative industry dispossession? According to Slavoj Žižek, when art production is increasingly subjected to commodification, and when commodities are increasingly aestheticized, artworks are no longer able to sustain the lack in the <em>big Other</em>, understood here as the agency of belief in art’s social and cultural significance.<a href="#fn43" class="footnoteRef" id="fnref43"><sup>43</sup></a> One symptom of this phenomenon is the view that art today has collapsed directly into political economy. In the words of the editors of <em>e-flux</em> journal, ‘contemporary art <em>is</em> neoliberalism in its most purified form’.<a href="#fn44" class="footnoteRef" id="fnref44"><sup>44</sup></a> The truth of this assertion is that artworks are particularly apt as signifiers of castration. As creativity marks ever more aspects of daily life, almost any kind of work not only can, but in a kind of frenetic hysteria, must be elevated to the place of Art.<a href="#fn45" class="footnoteRef" id="fnref45"><sup>45</sup></a> While this may seem a standard postmodern argument for the breakdown of the distinction between high art and mass culture, postmodernism tends nevertheless to leave belief in the aesthetic intact, proliferating through the fields of discourse it comes into contact with. In the following, I argue against postmodern relativism, however, and wish to consider instead, to paraphrase Žižek in his thinking on Christianity, ‘the perverse core’ of avant-garde art production.</p>
                 <div class="subchapter" id="subchapter2">
                     <h3>Art for Imbeciles</h3>
-                    <p>In an essay on what he calls ‘enclave theory’, John Roberts made the somewhat startling assertion that many of the most progressive art theories of recent years (those attributed to Nicolas Bourriaud, Gregory Sholette, Grant Kester, Stephen Wright, and even theorists like Jean-Luc Nancy, Alain Badiou, Slavoj Žižek, Bruno Bosteels, Felix Guattari, Toni Negri, and Michael Hardt) represent the ‘invariant core of a communist programme’ that is ‘largely divorced from the past’, in particular, from its Stalinist Communist party organizations, and is committed rather to ‘culturally aestheticized […] autonomous forms of productive, intellectual and creative community’.<a href="#fn46" class="footnoteRef" id="fnref46"><sup>46</sup></a> What is surprising in this claim is the idea that these are invariant forms, and not significantly different. Roberts asks us to consider what all of these theorists’ perspectives on radical culture have in common rather than what distinguishes them. This gesture might not be such a bad way to understand the so-called ‘crisis’ of art and art criticism in a world of cultural corporatization and neoliberal engineering of creative capital. Whatever contemporary art’s failings in terms of pursuing revolutionary class struggle, it represents, according to Roberts, a kind of leftist bloc against what Sholette terms enterprise culture. Perhaps one of the most acerbic depictions of the art world as a rigged system of economic and social exploitation is Bruce Barber’s 2008 drawing titled <em>Artworld Ponzi Scheme</em>, which shows a pyramid comprized of payers, prayers, and players, all of them trapped within a hierarchically inegalitarian system. The intrigue in this drawing, especially as it comes after the biggest financial debacle since the 1970s, is that the currency of art is premised on false claims, or even ‘toxic assets’.<br><br/> <img src="imgs/Leger.jpg" alt="" /></p>
+                    <p>In an essay on what he calls ‘enclave theory’, John Roberts made the somewhat startling assertion that many of the most progressive art theories of recent years (those attributed to Nicolas Bourriaud, Gregory Sholette, Grant Kester, Stephen Wright, and even theorists like Jean-Luc Nancy, Alain Badiou, Slavoj Žižek, Bruno Bosteels, Felix Guattari, Toni Negri, and Michael Hardt) represent the ‘invariant core of a communist programme’ that is ‘largely divorced from the past’, in particular, from its Stalinist Communist party organizations, and is committed rather to ‘culturally aestheticized […] autonomous forms of productive, intellectual and creative community’.<a href="#fn46" class="footnoteRef" id="fnref46"><sup>46</sup></a> What is surprising in this claim is the idea that these are invariant forms, and not significantly different. Roberts asks us to consider what all of these theorists’ perspectives on radical culture have in common rather than what distinguishes them. This gesture might not be such a bad way to understand the so-called ‘crisis’ of art and art criticism in a world of cultural corporatization and neoliberal engineering of creative capital. Whatever contemporary art’s failings in terms of pursuing revolutionary class struggle, it represents, according to Roberts, a kind of leftist bloc against what Sholette terms enterprise culture. Perhaps one of the most acerbic depictions of the art world as a rigged system of economic and social exploitation is Bruce Barber’s 2008 drawing titled <em>Artworld Ponzi Scheme</em>, which shows a pyramid comprized of payers, prayers, and players, all of them trapped within a hierarchically inegalitarian system. The intrigue in this drawing, especially as it comes after the biggest financial debacle since the 1970s, is that the currency of art is premised on false claims, or even ‘toxic assets’.<br><br/> <img src="imgs/Leger IMAGE.jpg" alt="" /></p>
                     <p>Fig. Bruce Barber, <em>Artworld Ponzi Scheme</em>, drawing, 2008. Courtesy of the artist.</p>
                     <p>The idea that art has no socially agreed upon justifications has been addressed by anthropologist David Graeber, who wonders why contemporary theorists attending an art symposium at the Tate Museum should explain the 2008 fiasco by taking recourse to avant-garde art created between 1916 and 1922.<a href="#fn47" class="footnoteRef" id="fnref47"><sup>47</sup></a> His point is that we are potentially once again living a revolutionary moment, but that epistemological subversion through culture and post-structuralist theory seems to satisfy only liberal academics. The return to avant-gardism, he argues, effects</p>
                     <blockquote>
