--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -170,7 +170,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->
 <div class="container-fluid">
     <div class="row">
-    <nav id="menu" class="pushmenu pushmenu-left not col-lg-2">
+    <nav id="menu" class="pushmenu pushmenu-left not col-lg-2 col-md-2 col-sm-2 col-xs-12 ">
         <div id="toc_wrapper">
             <div id="button_to_close_menu_on_small_devices"></div>
 
@@ -217,7 +217,7 @@
         <!--––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
 ––––––––––––––––––––––––––– FUNCTIONS ON XS DEVICES –––––––––––––––––––––––––––––––––
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->        
-        <div id="menu-bar-xs" class="hidden-lg hidden-md hidden-ms col-xs-12">
+        <div id="menu-bar-xs" class="hidden-lg hidden-md col-sm-12 col-xs-12">
             
             <!-- panel 1: Download-->
             <div id="panel">Download this book as:<br>
@@ -275,7 +275,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––-->
 <div class="container-fluid">
     <div class="row">
-<div id="menu-right" class="col-lg-2 col-lg-offset-10"> <!-- class="col-lg-2 col-md-2 hidden-sm hidden-xs">-->
+<div id="menu-right" class="col-lg-2 col-md-2 col-lg-offset-10 hidden-sm hidden-xs"> <!-- class="col-lg-2 col-md-2 hidden-sm hidden-xs">-->
         <div class="panel-group" id="accordion">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -519,7 +519,7 @@ This publication brings together six essays that offer a critique of the relatio
 
 <div class="container-fluid">
     <div class="row">
-        <div id="content" class="col-lg-6 col-lg-offset-2 col-md-6 col-sm-6 col-xs-12">
+        <div id="content" class="col-lg-5 col-lg-offset-2 col-md-5 col-sm-8 col-sm-offset-2 col-xs-12">
 
 
 
@@ -1613,7 +1613,7 @@ TRANSFORMED INTO SIDENOTES
 -->
 
 
-        <div id="sidenote-wrapper" class="lg-2 col-md-2 col-sm-2 hidden-xs">
+        <div id="sidenote-wrapper" class="col-lg-2 col-md-2 col-sm-2 hidden-xs">
             <div id="chapter8">
                 <ol>
                     <li class="sidenote" id="fn1"><p>Different versions of this essay were presented at Bureau Publik, Copenhagen, 31 October 2013 and KHIB in Bergen, Norway, on 5 November 2013.<a href="#fnref1">↩</a></p></li>
