--- a/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
+++ b/webdesign/Post-MoneyLab_0105/Post-GrayZones.html
@@ -321,14 +321,14 @@
 
 <!-- BOOK TITLE -->
     <div class="row">
-<<<<<<< Updated upstream
+<!-- <<<<<<< Updated upstream -->
         <div id="book-title" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         The Gray Zones<br>of Creativity<br>and Capital
         </div>
     </div>
-=======
+<!-- ======= -->
         <div id="content" class="col-lg-5 col-lg-offset-2 col-md-5 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-12">
->>>>>>> Stashed changes
+<!-- >>>>>>> Stashed changes -->
 
 <!-- SUMMARY BOX -->
     <div class="row">    
